[gd_scene load_steps=11 format=3 uid="uid://b2uoyxi2fgu7d"]

[ext_resource type="Script" path="res://game/player/player.gd" id="1_r5qx5"]
[ext_resource type="Texture2D" uid="uid://3oy6qh0pe54u" path="res://game/sprites/cowboy.png" id="2_lfujq"]
[ext_resource type="Script" path="res://game/player/playerhitbox.gd" id="3_34ojv"]
[ext_resource type="Script" path="res://game/gun/gun.gd" id="3_ksudq"]
[ext_resource type="AudioStream" uid="uid://hmmpp30xyurq" path="res://game/audio/shot.mp3" id="5_lxf0b"]
[ext_resource type="AudioStream" uid="uid://bcslpexj6p0hf" path="res://game/audio/chamber-spin.wav" id="6_wj1qx"]
[ext_resource type="AudioStream" uid="uid://daj1gm2wco561" path="res://game/audio/reload.mp3" id="7_xamsd"]
[ext_resource type="AudioStream" uid="uid://cvr1htjsgh54h" path="res://game/audio/blank.mp3" id="8_7jj7n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m07of"]
size = Vector2(23, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eh1y2"]
size = Vector2(27, 36)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_r5qx5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_m07of")

[node name="FlipX" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="FlipX"]
scale = Vector2(3, 3)
texture = ExtResource("2_lfujq")
hframes = 4
vframes = 4

[node name="Guntip" type="Node2D" parent="FlipX"]
position = Vector2(32, -4)
script = ExtResource("3_ksudq")
bullet_speed = 650.0

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 12
script = ExtResource("3_34ojv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_eh1y2")

[node name="SpinNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_wj1qx")
volume_db = 11.885

[node name="ReloadNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_xamsd")
volume_db = 12.876

[node name="ShootNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_lxf0b")
volume_db = 8.914

[node name="EmptyNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_7jj7n")
volume_db = 17.333
